<resources>

    <string name="clear">Clear</string>
    <string name="reset">Delete</string>
    <string name="proceed">Save</string>
    <string name="create">Create</string>
    <string name="notify">Notify</string>
    <string name="hour">Hour(0–23):</string>
    <string name="minute">Min(0–59):</string>
    <string name="more_options">Edit</string>
    <string name="app_name">Listsqre</string>
    <string name="app_guide">[User Guide]</string>
    <string name="ua_description">Passcode:</string>
    <string name="ua_btn_description">Enter</string>
    <string name="description">Type something:</string>
    <string name="cfm_description">Type \"confirm\" to proceed</string>
    <string name="add_noti_list_desc">Add to notification list</string>

    <string name="channel_id">Id_Listsqre</string>
    <string name="channel_name">Name_ListsqreNotification</string>
    <string name="channel_description">Desc_ListsqreNotification</string>

</resources>