<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:gravity="center_horizontal|top"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:contentDescription="@string/app_name">

        <LinearLayout
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:orientation="vertical">

            <!-- created card views will be nested in cardContainer LinearLayout -->

        </LinearLayout>

    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rst"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#393939"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/add"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="#393939"
            android:text="@string/create"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center|end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/app_guide"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>