<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#254252"
    android:gravity="center_horizontal|top"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:contentDescription="@string/app_name">

        <LinearLayout
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- created card views will be nested in cardContainer LinearLayout -->

        </LinearLayout>

    </ScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clr"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#eab56f"
            android:text="@string/clear"
            android:textAllCaps="true"
            android:textColor="#254252"
            android:textSize="18sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center|end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/app_guide"
            android:textColor="#eab56f"
            android:textSize="18sp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>